fix for z-index

--- a/src/css/components/bar.component.pcss
+++ b/src/css/components/bar.component.pcss
@@ -3,7 +3,7 @@
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 998;
+    z-index: 2147483640; /* bit ugly -- 2147483647 is max s32 int */
 }
 
 #accessabar .ab-bar {
